# ZX-Answering-Assistant-python

./: .gitignore  .gitmodules  BROWSER_INSTALL_GUIDE.md  BUILD.md  BUILD_ADMIN.md  BUILD_IMPROVEMENTS.md  BUILD_QUICK_START.md  CHANGELOG.md  CLAUDE.md  FLET_INSTALL_GUIDE.md  FLET_MANUAL_DOWNLOAD.md  FLET_QUICK_FIX.md  FLET_VERSION_FIX.md  PACKAGE_CONFIG.md  PACKAGE_OPTIMIZATION_SUMMARY.md  PLUGIN_DEVELOPMENT.md  PLUGIN_GUIDE.md  PLUGIN_SYSTEM_STATUS.md  README.md  RELEASE_NOTES_v3.6.1.md  SYSTEM_TRAY_README.md  TESTING.md  WEBAN_GUI_GUIDE.md  WEBAN_INTEGRATION.md  WEBAN_STATUS.md  ZX-Answering-Assistant-v2.6.6-windows-x64-installer.spec  build.bat  build.py  build_config.yaml  fix_browser_path.py  install_deps.bat  install_deps.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_plugin_center.py  test_plugin_view_switching.py  test_tray.py  (+2 more)
.github/workflows/: build.yml  release.yml
docs/: BROWSER_SETUP.md  BUILD_GUIDE.md  BUILD_QUICKREF.md  FLET_SETUP.md  PLUGIN_CENTER_VIEW_FIX.md  PR_BROWSER_WORKFLOW_FIX.md  REFACTORING_PHASE_3_COMPLETE.md  RELEASE_NOTES.md  REPOSITORY_REVIEW_CONCLUSION.md  SSL_SETUP.md  SYSTEM_BROWSER_SUPPORT.md
plugins/: PLUGIN_DEV_GUIDE.md  README.md
plugins/cloud_exam/: __init__.py  api_client.py  core.py  manifest.json  models.py  requirements.txt  ui.py  view.py  workflow.py
plugins/course_certification/: __init__.py  core.py  manifest.json  requirements.txt  ui.py
plugins/evaluation/: __init__.py  core.py  manifest.json  requirements.txt  ui.py
plugins/one_click_rating_for_projects/: __init__.py  api_client.py  comment_templates.json  core.py  excel_exporter.py  grading_service.py  manifest.json  models.py  requirements.txt  scoring.py  settings.json  template_service.py  ui.py  view.py
plugins/warning_alert/: CONFIG_GUIDE.md  ui.py  warning_config.example.json
plugins/weban_plugin/: README.md  WEBAN_SUBMODULE_GUIDE.md  __init__.py  core.py  manifest.json  requirements.txt  ui.py  weban_adapter.py  weban_view.py
scripts/: README.md  setup_weban.ps1  setup_weban.sh
src/: __init__.py  api_auto_answer.py  api_client.py  auto_answer.py  extract.py  extract_answers.py  main_gui.py  settings.py  student_login.py  teacher_login.py
src/answering/: _answer_matcher.py  api_answer.py  browser_answer.py
src/auth/: _student_browser_ops.py  _student_login.py  student.py  teacher.py
src/build_tools/: __init__.py  browser_handler.py  cache.py  common.py  compile_pyc.py  config.py  flet_handler.py  incremental.py  parallel.py  progress.py  signing.py  spec_generator.py  utils.py  version_info.py
src/certification/: __init__.py  api_answer.py  workflow.py
src/cloud_exam/: __init__.py  workflow.py
src/core/: __init__.py  _browser_installer.py  _worker_engine.py  api_client.py  browser.py  config.py  constants.py  flet_installer.py  plugin_context.py  plugin_manager.py  ssl_helper.py  ssl_helper_no_certifi.py  tray_manager.py
src/extraction/: bank_service.py  exporter.py  extractor.py
src/modules/: weban_adapter.py  weban_runner.py
src/ui/: __init__.py  components.py  theme.py
src/ui/dialogs/: input_dialog.py
src/utils/: __init__.py  bank_matcher.py
tests/: __init__.py  test_answer_progress_dialog.py  test_api_client.py  test_bank_matcher.py  test_bank_service.py  test_cloud_exam_plugin.py  test_config_and_plugins.py  test_lazy_grading_services.py  test_plugin_entrypoints.py  test_release_workflow.py
(+10 files in other folders)
