[project]
name = "zx-answering-assistant"
version = "3.5.0"
description = "Intelligent Answering Assistant System"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TianJiaJi"}
]

dependencies = [
    "flet>=0.82.0",
    "requests>=2.31.0",
    "certifi>=2024.0.0",
    "playwright>=1.57.0",
    "flet-desktop>=0.21.0",
    "pycryptodome>=3.19.0",
    "loguru>=0.7.0",
    "ddddocr>=1.5.0",
]



[tool.flet]
# 项目名称
project = "ZX-Answering-Assistant"
# 产品名称（使用英文避免乱码）
product = "ZX Answering Assistant"
# 公司/组织名称
org = "TianJiaJi"
# 描述（使用英文避免乱码）
description = "Intelligent Answering Assistant System"
# 版权信息
copyright = "Copyright © 2026 TianJiaJi"

# 启动画面配置
[tool.flet.splash]
color = "#0B6BFF"
dark_color = "#1a1a1a"

# 包含必要的文件
[tool.flet.include]
# 确保包含主入口文件
assets = [
    "main.py",
    "version.py",
]

# Boot screen
[tool.flet.app.boot_screen]
show = true
message = "正在准备首次启动"

# Startup screen
[tool.flet.app.startup_screen]
show = true
message = "正在加载组件"

# Windows 平台特定配置
[tool.flet.windows.app.startup_screen]
show = true
message = "正在初始化应用"
