[project]
name = "zx-answering-assistant"
version = "3.7.2"
description = "Intelligent Answering Assistant System"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TianJiaJi"}
]

dependencies = [
    "flet==0.82.2",
    "requests>=2.31.0",
    "certifi>=2024.0.0",
    "playwright>=1.57.0",
    "flet-desktop==0.82.2",
    "pycryptodome>=3.19.0",
    "loguru>=0.7.0",
    "ddddocr>=1.5.0",
    "DrissionPage>=4.1.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
]



[tool.flet]
# 项目名称
project = "ZX-Answering-Assistant"
# 产品名称（使用英文避免乱码）
product = "ZX Answering Assistant"
# 公司/组织名称
org = "TianJiaJi"
# 描述（使用英文避免乱码）
description = "Intelligent Answering Assistant System"
# 版权信息
copyright = "Copyright © 2026 TianJiaJi"

# 启动画面配置
[tool.flet.splash]
color = "#0B6BFF"
dark_color = "#1a1a1a"

# 包含必要的文件
[tool.flet.include]
# 确保包含主入口文件
assets = [
    "main.py",
    "version.py",
]

# 打包时排除仓库/开发/文档文件，保留运行所需的 main.py、version.py、src/、plugins/。
# Flet 的 exclude 使用相对路径精确匹配，目录会递归排除。
[tool.flet.app]
exclude = [
    ".git",
    ".github",
    ".claude",
    ".idea",
    ".vscode",
    ".venv",
    "venv",
    "env",
    "ENV",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "docs",
    "tests",
    "downloads",
    "logs",
    "output",
    "scripts",
    "data",
    "playwright_browsers",
    "flet_browsers",
    "src_compiled",
    ".gitignore",
    "build.bat",
    "README.md",
    "CHANGELOG.md",
    "CLAUDE.md",
    "PLUGIN_DEVELOPMENT.md",
    "SYSTEM_TRAY_README.md",
    "requirements.txt",
    "plugins/README.md",
    "plugins/PLUGIN_DEV_GUIDE.md",
    "plugins/weban_plugin/modules/WeBan/.git",
    "plugins/weban_plugin/modules/WeBan/.github",
]

[tool.flet.cleanup]
app = true
packages = true
app_files = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/*.log",
    "**/.pytest_cache",
    "**/.git",
    "**/.github",
    "plugins/**/*.md",
    "plugins/**/warning_config.example.json",
]

# Boot screen
[tool.flet.app.boot_screen]
show = true
message = "正在准备首次启动"

# Startup screen
[tool.flet.app.startup_screen]
show = true
message = "正在加载组件"

# Windows 平台特定配置
[tool.flet.windows.app.startup_screen]
show = true
message = "正在初始化应用"
